<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="characterDetailViewModel"
            type="com.ahmedmolawale.starwars.features.characters.presentation.viewmodel.CharacterDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">


        <RelativeLayout
            android:id="@+id/character_initials_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/circular_shimmer_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/contactInitials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circularstdbold"
                android:textAlignment="center"
                android:text="@{characterDetailViewModel.character.nameInitials}"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="AO" />
        </RelativeLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="26dp"
            android:fontFamily="@font/circularstdbold"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@{characterDetailViewModel.character.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_initials_layout"
            tools:text="Ahmed Olawale" />

        <LinearLayout
            android:id="@+id/height_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="26dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circularstdbook"
                android:gravity="center"
                android:text="@string/height"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/height_in_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/circularstdbook"
                android:gravity="center"
                android:text="@string/height_in_cm"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="4GEWQAD" />

            <TextView
                android:id="@+id/height_in_inches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/circularstdbook"
                android:gravity="center"
                android:text="@string/height_in_inches"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="4GEWQAD" />

        </LinearLayout>

        <TextView
            android:id="@+id/bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:ellipsize="end"
            android:fontFamily="@font/circularstdbook"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio_desc"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_section"
            tools:text="Believer | Optimist | Grateful soul | Kindness | Game changer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/stroke_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

