<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="characterSearchViewModel"
            type="com.ahmedmolawale.starwars.features.characters.presentation.viewmodel.CharacterSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:fontFamily="@font/circularstdbook"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLength="140"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/circularstdmedium"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search"
            app:layout_constraintTop_toTopOf="@id/search" />


        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="@{characterSearchViewModel.charactersSearchView.loading ? View.VISIBLE : View.GONE, default=visible}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            app:shimmer_auto_start="true"
            app:shimmer_highlight_color="@color/stroke_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/character_item_shimmer" />

                <include layout="@layout/character_item_shimmer" />

                <include layout="@layout/character_item_shimmer" />

                <include layout="@layout/character_item_shimmer" />

                <include layout="@layout/character_item_shimmer" />

                <include layout="@layout/character_item_shimmer" />

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/characters_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:overScrollMode="never"
            android:visibility="@{characterSearchViewModel.charactersSearchView.characters != null ? View.VISIBLE : View.GONE, default=gone}"
            app:items="@{characterSearchViewModel.charactersSearchView.characters}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            tools:listitem="@layout/character_item" />

        <TextView
            android:id="@+id/no_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstdbook"
            android:gravity="center"
            android:text="@string/no_characters"
            android:textAllCaps="false"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="@{characterSearchViewModel.charactersSearchView.empty ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_on_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circularstdbook"
            android:gravity="center"
            android:text="@{characterSearchViewModel.charactersSearchView.errorMessage}"
            android:textAllCaps="false"
            android:textColor="@color/light_grey"
            android:textSize="14sp"
            android:visibility="@{characterSearchViewModel.charactersSearchView.errorMessage != null ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>